--- a/Zomato_EDA.ipynb
+++ b/Zomato_EDA.ipynb
@@ -7375,6 +7375,40 @@
       "metadata": {
         "id": "6_BAiGxpXohb"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Findings and Conclusion\n",
+        "  1. BTM has the highest number of restraunts. So if someone has to come up with a restraunt, they should choose places like Old Airport road, St.Marks Road etc where there are lessesr number of existing retraunts.\n",
+        "\n",
+        "\n",
+        "  2. Most restraunts have online order facility.\n",
+        "\n",
+        "  3. Table booking facility is lacking in majority of restraunts.\n",
+        "\n",
+        "  4. We can see that restraunts with online order facility tend to have a higher rating, though the average rating is quite similar with that of restraunts not offering online order facility.\n",
+        "\n",
+        "  5. Restraunts having table booking facility have a much higher rating compared to other restraunts.\n",
+        "\n",
+        "  6. Places like Electromic city, Residency road, Richmond road, Shanti Nagar, Shivaji Nagar have lesser restarunts that offer online delivery.\n",
+        "\n",
+        "  7. People prefer visiting eateries related to Drinks and nightlife , pubs and bars more.\n",
+        "\n",
+        "  8. North Indian is the most liked cuisine in Bengaluru followed by Chinese and South Indian.\n"
+      ],
+      "metadata": {
+        "id": "vRJat-zmcoom"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4Cz1V-1EeKnX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
